# n4m

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  match_images.cpp
include/n4m/: backend.hpp  lightglue.hpp  types.hpp  xfeat.hpp
include/nnmatch/: lightglue.hpp  types.hpp  xfeat.hpp
models/: README.md  xfeat.onnx
src/: CMakeLists.txt  ort_env.hpp
src/lightglue/: CMakeLists.txt  lightglue.cpp
src/xfeat/: CMakeLists.txt  xfeat.cpp  xfeat_postprocess.hpp
test/: CMakeLists.txt  gtest_main.cpp  test_lightglue.cpp  test_postprocess.cpp  test_types.cpp  test_xfeat.cpp
test/reference/: lightglue_matches0.npy  lightglue_scores0.npy  xfeat_descriptors.npy  xfeat_keypoints.npy
tools/: ci_local.sh  export_reference.py  install_dependencies.sh
tools/export/: 1_export_xfeat_ncnn.py  1_export_xfeat_onnx.py  2_export_reference.py  3_test_ncnn_model.py  3_test_onnx_model.py  4_export_lightglue_onnx.py  5_export_lightglue_reference.py  6_test_lightglue_onnx.py  README.md  export_all.sh  requirements.txt  setup_venv.sh
